force-app/main/default/objects/ResourceSkill__c/ResourceSkill__c.object-meta.xml
<CustomObject>
    <description>Junction between Resource and Skill capturing proficiency. Master-detail child of Resource.</description>
    <label>Resource Skill</label>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Resource Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>