force-app/main/default/objects/ResourceSkill__c/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Proficiency level from 1 (novice) to 5 (expert).</description>
    <label>Proficiency</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>