force-app/main/default/objects/ResourceSkill__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>Parent resource.</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resource Skills</relationshipLabel>
    <relationshipName>Resource_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>