force-app/main/default/objects/ResourceSkill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The skill possessed.</description>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Resource Skills</relationshipLabel>
    <relationshipName>Resource_Skills</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>